--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -10,9 +10,9 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = bureaucrat
+NAME = form
 
-SRCS = main.cpp Bureaucrat.cpp
+SRCS = main.cpp Bureaucrat.cpp Form.cpp
 OBJS = $(addprefix $(OBJ_DIR)/, $(SRCS:%.cpp=%.o))
 OBJ_DIR = objects
 FLAGS = -std=c++98 -Wall -Wextra -Werror
